--- a/src/main/resources/web/ylt/index.html
+++ b/src/main/resources/web/ylt/index.html
@@ -50,7 +50,7 @@
 			
 			<div class="col-md-4 col-sm-6 logo">
 				<a class="navbar-brand" href="index.html">
-					<i class="fas fa-taxi"></i> 亿路通租车</a>
+					<i class="fas fa-car"></i> 亿路通租车</a>
 			</div>
 			
 			
@@ -63,6 +63,7 @@
 					<a href="#" data-toggle="modal" data-target="#registeredPanel" >
 						<i class="fas fa-user"></i> 注册</a>
 				</span>
+
 			</div>
 
             <div id="yesLogin" class="col-md-4 top-forms mt-md-3 mt-2 mb-md-0 mb-3">
@@ -130,9 +131,9 @@
 						<div class="banner-img">
 							<div class="bs-slider-overlay">
 								<div class="banner-info text-center">
-									<span class="fas fa-taxi"></span>
-									<h1>24/7 Taxi Service </h1>
-									<h2 class="mb-5"><i class="fas fa-phone"></i> 12(00) 123 1234</h2>
+									<span class="fas fa-car"></span>
+									<h1>7 X 24小时租车服务</h1>
+									<h2 class="mb-5"><i class="fas fa-heart"></i> 方便快捷</h2>
 									<a href="booking.html">立即选车</a>
 								</div>
 							</div>
@@ -142,9 +143,9 @@
 						<div class="banner-img one">
 							<div class="bs-slider-overlay">
 								<div class="banner-info text-center">
-									<span class="fas fa-taxi"></span>
-									<h4>Online Cab Booking</h4>
-									<h5 class="mb-5">No Extra Charges</h5>
+									<span class="fas fa-car"></span>
+									<h4>在线预订车辆</h4>
+									<h5 class="mb-5"><i class="fas fa-money-bill-alt"></i> 没有额外费用</h5>
 									<a href="booking.html">立即选车</a>
 								</div>
 							</div>
@@ -154,9 +155,9 @@
 						<div class="banner-img two">
 							<div class="bs-slider-overlay">
 								<div class="banner-info text-center">
-									<span class="fas fa-taxi"></span>
-									<h4>Reach Your Destination</h4>
-									<h5 class="mb-5">Within Exact Time </h5>
+									<span class="fas fa-car"></span>
+									<h4>保证你的旅行安全</h4>
+									<h5 class="mb-5"><i class="fas fa-road"></i> 无后顾之忧</h5>
 									<a href="booking.html">立即选车</a>
 								</div>
 							</div>
@@ -166,9 +167,9 @@
 						<div class="banner-img three">
 							<div class="bs-slider-overlay">
 								<div class="banner-info text-center">
-									<span class="fas fa-taxi"></span>
-									<h4>Travel Safe & Secure</h4>
-									<h5 class="mb-5">Assured Cab Service</h5>
+									<span class="fas fa-car"></span>
+									<h4>自驾出行</h4>
+									<h5 class="mb-5"><i class="fas fa-star"></i> 安心之选</h5>
 									<a href="booking.html">立即选车</a>
 								</div>
 							</div>
@@ -202,7 +203,7 @@
 					<h4>Traffic Roads</h4>
 				</div>
 				<div class="col-lg-2 col-sm-4 col-6 mt-lg-0 mt-5 about-grid p-0">
-					<i class="fa fa-taxi" aria-hidden="true"></i>
+					<i class="fa fa-car" aria-hidden="true"></i>
 					<h4>Taxi Cabs</h4>
 				</div>
 				<div class="col-lg-2 col-sm-4 col-6 mt-lg-0 mt-5 about-grid p-0">
@@ -289,233 +290,7 @@
 		</div>
 	</div>
 </section>
-<!-- //Why taxi cab -->
 
-<!-- team -->
-<section class="wthree-row py-5">
-	<div class="container py-lg-5 py-3">
-		<h3 class="heading text-capitalize text-center">Our Drivers</h3>
-		<h5 class="heading mb-5 text-center">Taxi Cab</h5>
-		<div class="row text-center">
-			<div class="col-lg-3 col-sm-6 col-6 team-grids">
-				<div class="team-effect">
-					<img th:src="@{/images/team1.jpg}" alt="img" class="img-fluid">
-				</div>
-				<!-- team text -->
-				<div class="footerv2-w3ls mt-3">
-					<h4>John Smith</h4>
-					<p class="my-2">Taxi Driver</p>
-					<p><i class="fas fa-phone" aria-hidden="true"></i> 12(00) 123 1234</p>
-				</div>
-				<!-- //team text -->
-			</div>
-			<div class="col-lg-3 col-sm-6 col-6 team-grids">
-				<div class="team-effect">
-					<img th:src="@{/images/team2.jpg}" alt="img" class="img-fluid">
-				</div>
-				<!-- team text -->
-				<div class="footerv2-w3ls mt-3">
-					<h4>Laura Hill</h4>
-					<p class="my-2">Taxi Driver</p>
-					<p><i class="fas fa-phone" aria-hidden="true"></i> 12(00) 123 1235</p>
-				</div>
-				<!-- //team text -->
-			</div>
-			<div class="col-lg-3 col-sm-6 col-6 team-grids mt-lg-0 mt-5">
-				<div class="team-effect">
-					<img th:src="@{/images/team3.jpg}" alt="img" class="img-fluid">
-				</div>
-				<!-- team text -->
-				<div class="footerv2-w3ls mt-3">
-					<h4>Smith Kevin</h4>
-					<p class="my-2">Taxi Driver</p>
-					<p><i class="fas fa-phone" aria-hidden="true"></i> 12(00) 123 1236</p>
-				</div>
-				<!-- //team text -->
-			</div>
-			<div class="col-lg-3 col-sm-6 col-6 team-grids mt-lg-0 mt-5">
-				<div class="team-effect">
-					<img th:src="@{/images/team4.jpg}" alt="img" class="img-fluid">
-				</div>
-				<!-- team text -->
-				<div class="footerv2-w3ls mt-3">
-					<h4>Thomson Doe</h4>
-					<p class="my-2">Taxi Driver</p>
-					<p><i class="fas fa-phone" aria-hidden="true"></i> 12(00) 123 1237</p>
-				</div>
-				<!-- //team text -->
-			</div>
-		</div>
-	</div>
-</section>
-<!-- //team -->
-
-<!-- Our prices -->
-<section class="prices py-5">
-	<div class="container py-lg-5 py-3">
-		<h3 class="heading text-capitalize text-center">Our Pricing</h3>
-		<h5 class="heading mb-5 text-center">Taxi Cab</h5>
-		<div class="row pricing-grids">
-			<div class="col-lg-3 col-md-6 price-grid">
-				<h3 class="mb-4">Micro Taxi -- <span class="">2$</span></h3>
-				<h4 class="my-3">Small fares for short rides</h4>
-				<p> Curabitur eu neque nec ante sagittis dapibus et eu purus. Proin et erat tempus, tempor sapien ac, faucibus nibh.</p>
-				<ul class="d-flex mt-3">
-					<li class="mr-3">2 <i class="fas fa-male" aria-hidden="true"></i></li>
-					<li class="mr-3">1 <i class="fas fa-suitcase" aria-hidden="true"></i></li>
-				</ul>
-			</div>
-			<div class="col-lg-3 col-md-6 mt-md-0 mt-5 price-grid">
-				<h3 class="mb-4">Mini Taxi -- <span class="">3$</span></h3>
-				<h4 class="my-3">Small fares for short rides</h4>
-				<p> Curabitur eu neque nec ante sagittis dapibus et eu purus. Proin et erat tempus, tempor sapien ac, faucibus nibh.</p>
-				<ul class="d-flex mt-3">
-					<li class="mr-3">2 <i class="fas fa-male" aria-hidden="true"></i></li>
-					<li class="mr-3">2 <i class="fas fa-suitcase" aria-hidden="true"></i></li>
-					<li class="mr-3">1 <i class="fas fa-wifi" aria-hidden="true"></i></li>
-				</ul>
-			</div>
-			<div class="col-lg-3 col-md-6 mt-lg-0 mt-5 price-grid">
-				<h3 class="mb-4">Prime Taxi -- <span class="">4$</span></h3>
-				<h4 class="my-3">Small fares for short rides</h4>
-				<p> Curabitur eu neque nec ante sagittis dapibus et eu purus. Proin et erat tempus, tempor sapien ac, faucibus nibh.</p>
-				<ul class="d-flex mt-3">
-					<li class="mr-3">3 <i class="fas fa-male" aria-hidden="true"></i></li>
-					<li class="mr-3">2 <i class="fas fa-suitcase" aria-hidden="true"></i></li>
-					<li class="mr-3">1 <i class="fas fa-wifi" aria-hidden="true"></i></li>
-				</ul>
-			</div>
-			<div class="col-lg-3 col-md-6 mt-lg-0 mt-5 price-grid">
-				<h3 class="mb-4">Sedan Taxi -- <span class="">5$</span></h3>
-				<h4 class="my-3">Small fares for short rides</h4>
-				<p> Curabitur eu neque nec ante sagittis dapibus et eu purus. Proin et erat tempus, tempor sapien ac, faucibus nibh.</p>
-				<ul class="d-flex mt-3">
-					<li class="mr-3">4 <i class="fas fa-male" aria-hidden="true"></i></li>
-					<li class="mr-3">3 <i class="fas fa-suitcase" aria-hidden="true"></i></li>
-					<li class="mr-3">1 <i class="fas fa-wifi" aria-hidden="true"></i></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- //Our prices -->
-
-<!--/testimonials-->
-<section class="testimonials banner-bottom-agile-w3ls py-5">
-	<div class="container py-lg-5 py-3">
-		<h3 class="heading text-capitalize text-center">Testimonial</h3>
-		<h5 class="heading mb-5 text-center">Taxi Cab</h5>
-		<div class="inner-sec-w3layouts-agileits">
-			<div class="owl-carousel owl-theme">
-				<div class="item">
-					<div class="feedback-info">
-						<div class="feedback-top p-4">
-							<p> Sed semper leo metus, a lacinia eros semper at. Etiam sodales orci sit amet vehicula pellentesque. </p>
-						</div>
-						<div class="feedback-grids">
-							<div class="feedback-img">
-								<img th:src="@{/images/team1.jpg}" class="img-fluid" alt="" />
-							</div>
-							<div class="feedback-img-info">
-								<h5>Mary Jane</h5>
-								<p>Customer</p>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="feedback-info">
-						<div class="feedback-top p-4">
-							<p> Sed semper leo metus, a lacinia eros semper at. Etiam sodales orci sit amet vehicula pellentesque. </p>
-						</div>
-						<div class="feedback-grids">
-							<div class="feedback-img">
-								<img th:src="@{/images/team3.jpg}" class="img-fluid" alt="" />
-							</div>
-							<div class="feedback-img-info">
-								<h5>Peter Guptill</h5>
-								<p>Customer</p>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="feedback-info">
-						<div class="feedback-top p-4">
-							<p> Sed semper leo metus, a lacinia eros semper at. Etiam sodales orci sit amet vehicula pellentesque. </p>
-						</div>
-						<div class="feedback-grids">
-							<div class="feedback-img">
-								<img th:src="@{/images/team1.jpg}" class="img-fluid" alt="" />
-							</div>
-							<div class="feedback-img-info">
-								<h5>Steven Wilson</h5>
-								<p>Customer</p>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="feedback-info">
-						<div class="feedback-top p-4">
-							<p> Sed semper leo metus, a lacinia eros semper at. Etiam sodales orci sit amet vehicula pellentesque. </p>
-						</div>
-						<div class="feedback-grids">
-							<div class="feedback-img">
-								<img th:src="@{/images/team3.jpg}" class="img-fluid" alt="" />
-							</div>
-							<div class="feedback-img-info">
-								<h5>Mary Jane</h5>
-								<p>Customer</p>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="feedback-info">
-						<div class="feedback-top p-4">
-							<p> Sed semper leo metus, a lacinia eros semper at. Etiam sodales orci sit amet vehicula pellentesque. </p>
-						</div>
-						<div class="feedback-grids">
-							<div class="feedback-img">
-								<img th:src="@{/images/team1.jpg}" class="img-fluid" alt="" />
-							</div>
-							<div class="feedback-img-info">
-								<h5>Peter Guptill</h5>
-								<p>Customer</p>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="feedback-info">
-						<div class="feedback-top p-4 p-4">
-							<p> Sed semper leo metus, a lacinia eros semper at. Etiam sodales orci sit amet vehicula pellentesque. </p>
-						</div>
-						<div class="feedback-grids">
-							<div class="feedback-img">
-								<img th:src="@{/images/team3.jpg}" class="img-fluid" alt="" />
-							</div>
-							<div class="feedback-img-info">
-								<h5>Steven Wilson</h5>
-								<p>Customer</p>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!--//testimonials-->
-	
-<!--footer-->
 <footer class="py-sm-5 py-4 px-md-5 px-3">
 	<div class="container-fluid pt-lg-5">
 		<div class="row">
@@ -698,8 +473,8 @@
 			</div>
 			<div class="modal-body">
 				<div class="form-group">
-					<label for="OldPassword" class="col-form-label">新密码</label>
-					<input type="password" class="form-control" lay-verify="pass" placeholder="旧密码" id="OldPassword" required="">
+					<label for="oldPassword" class="col-form-label">旧密码</label>
+					<input type="password" class="form-control" lay-verify="pass" placeholder="旧密码" id="oldPassword" required="">
 				</div>
 				<div class="form-group">
 					<label for="newPassword" class="col-form-label">新密码</label>
@@ -711,6 +486,7 @@
 				</div>
 
 				<div class="right-w3l">
+                    <input type="hidden" id="accountId" />
 					<input type="submit" id="subPass" class="form-control" value="确认">
 				</div>
 			</div>
@@ -816,6 +592,7 @@
             $("#noLogin").hide();
             $("#yesLogin").show();
             $("#nameSpan").append(account.username);
+            $("#accountId").val(account.id);
         }else{
             $("#noLogin").show();
             $("#yesLogin").hide();
@@ -838,21 +615,24 @@
 			var passwordO = $("#oldPassword").val();
 			var password = $("#newPassword").val();
 			var conPassword = $("#conPassword").val();
+			var id = $("#accountId").val();
             var index_ = layer.load(1);
             if(password !== conPassword){
                 layer.msg("两次密码输入不一致");
+                layer.close(index_);
                 return false;
             }
             password = encode64(password);
             passwordO = encode64(passwordO);
             $.ajax({
                 url:[[@{user/update}]],
-            	data:{"password":password,"passwordO":passwordO},
+            	data:{"password":password,"passwordO":passwordO,"id":id},
                 type:"post",
                 dataType:"json",
                 success:function(result){
                 if(result.success){
                     layer.msg("保存成功");
+                    window.location = [[@{/}]];
                 }else{
                     layer.msg(result.msg);
                 }
