--- a/src/main/resources/web/ylt/index.html
+++ b/src/main/resources/web/ylt/index.html
@@ -99,7 +99,7 @@
 							<a class="nav-link" href="services.html">Services</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="booking.html">立即选车</a>
+							<a class="nav-link" th:href="@{/route/browseVehicle}">立即选车</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
@@ -134,7 +134,7 @@
 									<span class="fas fa-car"></span>
 									<h1>7 X 24小时租车服务</h1>
 									<h2 class="mb-5"><i class="fas fa-heart"></i> 方便快捷</h2>
-									<a href="booking.html">立即选车</a>
+									<a th:href="@{/route/browseVehicle}">立即选车</a>
 								</div>
 							</div>
 						</div>
@@ -146,7 +146,7 @@
 									<span class="fas fa-car"></span>
 									<h4>在线预订车辆</h4>
 									<h5 class="mb-5"><i class="fas fa-money-bill-alt"></i> 没有额外费用</h5>
-									<a href="booking.html">立即选车</a>
+									<a th:href="@{/route/browseVehicle}">立即选车</a>
 								</div>
 							</div>
 						</div>
@@ -158,7 +158,7 @@
 									<span class="fas fa-car"></span>
 									<h4>保证你的旅行安全</h4>
 									<h5 class="mb-5"><i class="fas fa-road"></i> 无后顾之忧</h5>
-									<a href="booking.html">立即选车</a>
+									<a th:href="@{/route/browseVehicle}">立即选车</a>
 								</div>
 							</div>
 						</div>
@@ -170,7 +170,7 @@
 									<span class="fas fa-car"></span>
 									<h4>自驾出行</h4>
 									<h5 class="mb-5"><i class="fas fa-star"></i> 安心之选</h5>
-									<a href="booking.html">立即选车</a>
+									<a th:href="@{/route/browseVehicle}">立即选车</a>
 								</div>
 							</div>
 						</div>
