--- a/src/main/resources/web/ylt/index.html
+++ b/src/main/resources/web/ylt/index.html
@@ -39,151 +39,221 @@
 </head>
 
 <body>
+<div class="top-bar_sub_w3layouts container-fluid">
+	<div class="row">
 
-<!--/banner-->
-	<div class="top-bar_sub_w3layouts container-fluid">
-		<div class="row">
-			
-			<div class="col-md-4 col-sm-6 log-icons mt-2">
-				<p class="py-2"><i class="fas fa-phone"></i> 服务热线 : 12(00) 123 1234</p>
-			</div>
-			
-			<div class="col-md-4 col-sm-6 logo">
-				<a class="navbar-brand" href="index.html">
-					<i class="fas fa-car"></i> 亿路通租车</a>
-			</div>
-			
-			
-			<div id="noLogin" class="col-md-4 top-forms mt-md-3 mt-2 mb-md-0 mb-3">
+		<div class="col-md-4 col-sm-6 log-icons mt-2">
+			<p class="py-2"><i class="fas fa-phone"></i> 服务热线 : 12(00) 123 1234</p>
+		</div>
+
+		<div class="col-md-4 col-sm-6 logo">
+			<a class="navbar-brand" href="index.html">
+				<i class="fas fa-car"></i> 亿路通租车</a>
+		</div>
+
+
+		<div id="noLogin" class="col-md-4 top-forms mt-md-3 mt-2 mb-md-0 mb-3">
 				<span class="mx-lg-4 mx-md-2  mx-1">
 					<a href="#" data-toggle="modal" aria-pressed="false" data-target="#loginPanel">
 						<i class="fas fa-lock"></i> 登录</a>
 				</span>
-				<span>
-					<a href="#" data-toggle="modal" data-target="#registeredPanel" >
+			<span>
+					<a href="#" data-toggle="modal" data-target="#registeredPanel">
 						<i class="fas fa-user"></i> 注册</a>
 				</span>
 
-			</div>
+		</div>
 
-            <div id="yesLogin" class="col-md-4 top-forms mt-md-3 mt-2 mb-md-0 mb-3">
-                <a id="nameSpan" href="#"><i class="fas fa-user"></i> </a>
-                <a href="#" data-toggle="modal" aria-pressed="false" data-target="#changePass">
-                    <i class="fas fa-lock"></i> 修改密码</a>
-                <a th:href="@{/logout}">
-                    <i class="fas fa-outdent"></i> 退出</a>
-            </div>
+		<div id="yesLogin" class="col-md-4 top-forms mt-md-3 mt-2 mb-md-0 mb-3">
+			<a id="nameSpan" href="#"><i class="fas fa-user"></i> </a>
+			<a href="#" data-toggle="modal" aria-pressed="false" data-target="#changePass">
+				<i class="fas fa-lock"></i> 修改密码</a>
+			<a th:href="@{/logout}">
+				<i class="fas fa-outdent"></i> 退出</a>
 		</div>
 	</div>
+</div>
+<div class="banner" id="home">
+	<!-- header -->
+	<header>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light top-header">
+			<button class="navbar-toggler mx-auto" type="button" data-toggle="collapse"
+					data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 
-	<div class="banner" id="home">
-		<!-- header -->
-		<header>
-			<nav class="navbar navbar-expand-lg navbar-light bg-light top-header">
-				<button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-				    aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mx-auto">
+					<li class="nav-item active">
+						<a class="nav-link ml-lg-0" href="index.html">首页
+							<span class="sr-only">(current)</span>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="about.html">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="services.html">Services</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" th:href="@{/route/browseVehicle}">立即选车</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+						   data-toggle="dropdown" aria-haspopup="true"
+						   aria-expanded="false">
+							Dropdown
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item text-center" href="about.html">About</a>
+							<a class="dropdown-item text-center" href="services.html">Services</a>
 
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mx-auto">
-						<li class="nav-item active">
-							<a class="nav-link ml-lg-0" href="index.html">首页
-								<span class="sr-only">(current)</span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="about.html">About</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="services.html">Services</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" th:href="@{/route/browseVehicle}">立即选车</a>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-							    aria-expanded="false">
-								Dropdown
-							</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item text-center" href="about.html">About</a>
-								<a class="dropdown-item text-center" href="services.html">Services</a>
-
-							</div>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="contact.html">Contact</a>
-						</li>
-					</ul>
-
-				</div>
-			</nav>
-		</header>
-		<!-- //header -->
-		<!-- banner-text -->
-		<div id="wrapper">
-
-			<!-- Slideshow 1 -->
-			<div class="rslides_container">
-				<ul class="rslides" id="slider1">
-					<li>
-						<div class="banner-img">
-							<div class="bs-slider-overlay">
-								<div class="banner-info text-center">
-									<span class="fas fa-car"></span>
-									<h1>7 X 24小时租车服务</h1>
-									<h2 class="mb-5"><i class="fas fa-heart"></i> 方便快捷</h2>
-									<a th:href="@{/route/browseVehicle}">立即选车</a>
-								</div>
-							</div>
 						</div>
 					</li>
-					<li>
-						<div class="banner-img one">
-							<div class="bs-slider-overlay">
-								<div class="banner-info text-center">
-									<span class="fas fa-car"></span>
-									<h4>在线预订车辆</h4>
-									<h5 class="mb-5"><i class="fas fa-money-bill-alt"></i> 没有额外费用</h5>
-									<a th:href="@{/route/browseVehicle}">立即选车</a>
-								</div>
-							</div>
-						</div>
+					<li class="nav-item">
+						<a class="nav-link" href="contact.html">Contact</a>
 					</li>
-					<li>
-						<div class="banner-img two">
-							<div class="bs-slider-overlay">
-								<div class="banner-info text-center">
-									<span class="fas fa-car"></span>
-									<h4>保证你的旅行安全</h4>
-									<h5 class="mb-5"><i class="fas fa-road"></i> 无后顾之忧</h5>
-									<a th:href="@{/route/browseVehicle}">立即选车</a>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="banner-img three">
-							<div class="bs-slider-overlay">
-								<div class="banner-info text-center">
-									<span class="fas fa-car"></span>
-									<h4>自驾出行</h4>
-									<h5 class="mb-5"><i class="fas fa-star"></i> 安心之选</h5>
-									<a th:href="@{/route/browseVehicle}">立即选车</a>
-								</div>
-							</div>
-						</div>
-					</li>
-
 				</ul>
+
 			</div>
+		</nav>
+	</header>
+	<!-- //header -->
+	<!-- banner-text -->
+	<div id="wrapper">
+
+		<!-- Slideshow 1 -->
+		<div class="rslides_container">
+			<ul class="rslides" id="slider1">
+				<li>
+					<div class="banner-img">
+						<div class="bs-slider-overlay">
+							<div class="banner-info text-center">
+								<span class="fas fa-car"></span>
+								<h1>7 X 24小时租车服务</h1>
+								<h2 class="mb-5"><i class="fas fa-heart"></i> 方便快捷</h2>
+								<a th:href="@{/route/browseVehicle}">立即选车</a>
+							</div>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="banner-img one">
+						<div class="bs-slider-overlay">
+							<div class="banner-info text-center">
+								<span class="fas fa-car"></span>
+								<h4>在线预订车辆</h4>
+								<h5 class="mb-5"><i class="fas fa-money-bill-alt"></i> 没有额外费用</h5>
+								<a th:href="@{/route/browseVehicle}">立即选车</a>
+							</div>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="banner-img two">
+						<div class="bs-slider-overlay">
+							<div class="banner-info text-center">
+								<span class="fas fa-car"></span>
+								<h4>保证你的旅行安全</h4>
+								<h5 class="mb-5"><i class="fas fa-road"></i> 无后顾之忧</h5>
+								<a th:href="@{/route/browseVehicle}">立即选车</a>
+							</div>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="banner-img three">
+						<div class="bs-slider-overlay">
+							<div class="banner-info text-center">
+								<span class="fas fa-car"></span>
+								<h4>自驾出行</h4>
+								<h5 class="mb-5"><i class="fas fa-star"></i> 安心之选</h5>
+								<a th:href="@{/route/browseVehicle}">立即选车</a>
+							</div>
+						</div>
+					</div>
+				</li>
+
+			</ul>
 		</div>
 	</div>
-	<!-- //banner -->
-
-	
-<!-- about -->
+</div>
+<section class="food-Slider py-5">
+	<div class="container py-lg-5">
+		<h3 class="heading text-capitalize text-center">Our Taxi Cars</h3>
+		<h5 class="heading mb-5 text-center">Taxi Cab</h5>
+		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<div class="row">
+						<div class="col-md-4 col-sm-6 slidering">
+							<div class="thumbnail"><img th:src="@{/images/1.png}" alt="Image" style="max-width:100%;">
+							</div>
+							<h5 class="my-2 text-center text-uppercase">Mini Taxi </h5>
+						</div>
+						<div class="col-md-4 col-sm-6 slidering">
+							<div class="thumbnail"><img th:src="@{/images/2.png}" alt="Image" style="max-width:100%;">
+							</div>
+							<h5 class="my-2 text-center text-uppercase">Prime Taxi </h5>
+						</div>
+						<div class="col-md-4 col-sm-6 slidering">
+							<div class="thumbnail"><img th:src="@{/images/3.png}" alt="Image" style="max-width:100%;">
+							</div>
+							<h5 class="my-2 text-center text-uppercase">Sedan Taxi </h5>
+						</div>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<div class="row">
+						<div class="col-md-4 col-sm-6 slidering">
+							<div class="thumbnail"><img th:src="@{/images/1.png}" alt="Image" style="max-width:100%;">
+							</div>
+							<h5 class="my-2 text-center text-uppercase">Mini Taxi </h5>
+						</div>
+						<div class="col-md-4 col-sm-6 slidering">
+							<div class="thumbnail"><img th:src="@{/images/2.png}" alt="Image" style="max-width:100%;">
+							</div>
+							<h5 class="my-2 text-center text-uppercase">Prime Taxi </h5>
+						</div>
+						<div class="col-md-4 col-sm-6 slidering">
+							<div class="thumbnail"><img th:src="@{/images/1.png}" alt="Image" style="max-width:100%;">
+							</div>
+							<h5 class="my-2 text-center text-uppercase">Sedan Taxi </h5>
+						</div>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<div class="row">
+						<div class="col-md-4 col-sm-6 slidering">
+							<div class="thumbnail"><img th:src="@{/images/2.png}" alt="Image" style="max-width:100%;">
+							</div>
+							<h5 class="my-2 text-center text-uppercase">Mini Taxi </h5>
+						</div>
+						<div class="col-md-4 col-sm-6 slidering">
+							<div class="thumbnail"><img th:src="@{/images/1.png}" alt="Image" style="max-width:100%;">
+							</div>
+							<h5 class="my-2 text-center text-uppercase">Prime Taxi </h5>
+						</div>
+						<div class="col-md-4 col-sm-6 slidering">
+							<div class="thumbnail"><img th:src="@{/images/3.png}" alt="Image" style="max-width:100%;">
+							</div>
+							<h5 class="my-2 text-center text-uppercase">Sedan Taxi </h5>
+						</div>
+					</div>
+				</div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+				<span class="fa fa-chevron-left" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+				<span class="fa fa-chevron-right" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+	</div>
+</section>
 <section class="about py-5">
 	<div class="container py-lg-5 py-3">
 		<h3 class="heading text-capitalize text-center">Welcome</h3>
